Rename config MongoColl to MongoDB.

--- a/etc/gosyslogd.conf
+++ b/etc/gosyslogd.conf
@@ -6,5 +6,6 @@
     "redis": "localhost:6379",
     "postgres": "user=log dbname=logs sslmode=disable",
     "mongohost": "localhost",
-    "mongocoll": "logs"
+    "mongodb": "logs",
+    "http": ":5145"
 }
