Update to modern go a bit.

--- a/etc/gosyslogd.conf
+++ b/etc/gosyslogd.conf
@@ -3,7 +3,7 @@
     "sockaddr": ":514",
     "rules": "/etc/gosyslogd/rules.d",
     "logdir": "/var/log/syslogd",
-    "redis": "localhost:6379",
-    "postgres": "user=log dbname=logs sslmode=disable",
+    "redis": "192.168.0.3:6379",
+    "postgres": "host=192.168.0.3 user=log dbname=logs sslmode=disable",
     "http": ":5145"
 }
