Add web interface and goweblogd daemon.

--- a/etc/gosyslogd.conf
+++ b/etc/gosyslogd.conf
@@ -1,9 +1,9 @@
 {
-    "unixpath": "/dev/log",
-    "sockaddr": ":514",
+    "unixpath": "/tmp/dev-log",
+    "sockaddr": ":5140",
     "rules": "/etc/gosyslogd/rules.d",
-    "logdir": "/var/log/syslogd",
+    "logdir": "/tmp/syslogd",
     "redis": "192.168.0.3:6379",
-    "postgres": "host=192.168.0.3 user=log dbname=logs sslmode=disable",
+    "postgres": "host=192.168.0.3 user=tommy dbname=logs sslmode=disable",
     "http": ":5145"
 }
