--- a/etc/gosyslogd.conf
+++ b/etc/gosyslogd.conf
@@ -5,5 +5,6 @@
     "logdir": "/tmp/syslogd",
     "redis": "192.168.0.3:6379",
     "postgres": "host=192.168.0.3 user=tommy dbname=logs sslmode=disable",
-    "http": ":5145"
+    "http": ":5145",
+    "archive": "/var/log/remote"
 }
